Thu May 31 12:46:29 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm_opendds.mpb:
          Fixed compile issues on windows.
          DdsDcps_lem_stub depends on ccm_lem_stub when
          dds4ccm_opendds is enabled.

Wed May 30 12:52:37 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/DomainParticipantFactoryImpl.h:
        * dds/DCPS/Service_Participant.h:
          Doxygen fixes

Wed May 30 07:01:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
          Added needed after for dds4ccm

Tue May 29 13:56:46 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportRegistry.cpp:

          Use proper ACE Logging formatting characters (%C vs %s).

Tue May 29 11:57:12 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/Qos_Helper.h:
          Fixed typo

Tue May 29 09:25:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_opendds.mpb:
          Added missing after

Tue May 29 09:20:58 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * bin/dcps_tests.lst:

        * tests/DCPS/RegisterInstance:

        * tests/DCPS/RegisterInstance/register_instance.mpc:
        * tests/DCPS/RegisterInstance/register_instance.cpp:
        * tests/DCPS/RegisterInstance/rtps_disc.ini:
        * tests/DCPS/RegisterInstance/run_test.pl:
          Added new test. This explicitly test the register_instance
          method on the DataWriter. It also tests whether an instance
          is implicitly created when a sample with an unknown instance
          is written to DDS.

Fri May 25 09:47:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
          Use gen_ostream as base project. With this feature the tao_idl
          generates ostream insertion operators which can be used to stream
          any idl defined type into an ostream. Going to use this in dds4ccm