@@ -1,14 +1,9 @@
-#include  "dds/DdsDcpsInfoUtilsC.h"
-#include  "dds/DCPS/Service_Participant.h"
-#include  "dds/DCPS/Marked_Default_Qos.h"
-#include  "dds/DCPS/Qos_Helper.h"
+#include "dds/DCPS/Service_Participant.h"
+#include "dds/DCPS/Marked_Default_Qos.h"
 
 #include "tests/DCPS/FooType/FooTypeTypeSupportImpl.h"
 #include "tests/DCPS/common/TestSupport.h"
 
-#include "dds/DCPS/transport/tcp/TcpInst.h"
-
-#include "dds/DCPS/StaticIncludes.h"
 #ifdef ACE_AS_STATIC_LIBS
 #include "dds/DCPS/RTPS/RtpsDiscovery.h"
 #include "dds/DCPS/transport/rtps_udp/RtpsUdp.h"
